[gd_scene load_steps=3 format=3 uid="uid://ktmqf7obgqh3"]

[ext_resource type="Script" path="res://UI/tutorial_menu/tutorial_menu.gd" id="1_ptxwl"]
[ext_resource type="Theme" uid="uid://b2w5lw0sv5ge6" path="res://game_assets/theme/custom_theme.tres" id="1_th4lx"]

[node name="TutorialMenu" type="Control"]
custom_minimum_size = Vector2(140, 40)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 140.0
grow_vertical = 0
script = ExtResource("1_ptxwl")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_th4lx")
theme_type_variation = &"PaperPanel"

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MoveLabel" type="Label" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Use w/a/s/d to move."

[node name="DashLabel" type="Label" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Use space to dash."

[node name="ReflectLabel" type="Label" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Use the mouse to move your
mirror and reflect projectiles."

[node name="KillLabel" type="Label" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Reflect projectiles
into your enemies."

[node name="ChargeLabel" type="Label" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Charge the mirror by
spinning it around yourself."

[node name="ReflectLabel2" type="Label" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Reflect a big projectile
by fully charging the mirror."

[node name="FinalLabel" type="Label" parent="Panel/MarginContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Enemies get stronger over time.
Survive as long as you can!"

[node name="Timer" type="Timer" parent="."]
